// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders tos and privacy 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 38,
        "marginTop": 10,
      },
      Object {
        "flexDirection": "column",
      },
    ]
  }
>
  <Text
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 16,
        "paddingHorizontal": 3,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    By creating your MissionHub account you agree to our
  </Text>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="ToSButton"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            null,
            Object {},
            null,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "letterSpacing": 0,
                "lineHeight": 16,
                "paddingHorizontal": 3,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textDecorationLine": "underline",
                "textTransform": "none",
              },
            ]
          }
        >
          Terms of Service
        </Text>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 16,
          "paddingHorizontal": 3,
          "textAlign": "center",
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      and
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="PrivacyButton"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            null,
            Object {},
            null,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "letterSpacing": 0,
                "lineHeight": 16,
                "paddingHorizontal": 3,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textDecorationLine": "underline",
                "textTransform": "none",
              },
            ]
          }
        >
          Privacy Policy
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders trial tos and privacy 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 38,
        "marginTop": 10,
      },
      Object {
        "flexDirection": "column",
      },
    ]
  }
>
  <Text
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 16,
        "paddingHorizontal": 3,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    By creating your MissionHub trial account you agree to our
  </Text>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="ToSButton"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            null,
            Object {},
            null,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "letterSpacing": 0,
                "lineHeight": 16,
                "paddingHorizontal": 3,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textDecorationLine": "underline",
                "textTransform": "none",
              },
            ]
          }
        >
          Terms of Service
        </Text>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 16,
          "paddingHorizontal": 3,
          "textAlign": "center",
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      and
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="PrivacyButton"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            null,
            Object {},
            null,
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "bold",
                "letterSpacing": 1,
                "lineHeight": 18,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "letterSpacing": 0,
                "lineHeight": 16,
                "paddingHorizontal": 3,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textDecorationLine": "underline",
                "textTransform": "none",
              },
            ]
          }
        >
          Privacy Policy
        </Text>
      </View>
    </View>
  </View>
</View>
`;
